Saving data to persistent store and Fixing dismissal to finishedGoalVC

--- a/goalpost/Base.lproj/Main.storyboard
+++ b/goalpost/Base.lproj/Main.storyboard
@@ -340,6 +340,9 @@
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bic-a6-iqn">
                                         <rect key="frame" x="15" y="37" width="14" height="25"/>
                                         <state key="normal" image="back"/>
+                                        <connections>
+                                            <action selector="backButtonWasPressed:" destination="0sj-NU-2zh" eventType="touchUpInside" id="Pau-cn-PSX"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" red="0.42745098040000001" green="0.73725490199999999" blue="0.38823529410000002" alpha="1" colorSpace="calibratedRGB"/>
@@ -375,10 +378,10 @@
                                 </subviews>
                             </stackView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mVc-7f-Db9">
-                                <rect key="frame" x="0.0" y="603" width="375" height="64"/>
+                                <rect key="frame" x="0.0" y="243" width="375" height="424"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Zy-Vz-wDN">
-                                        <rect key="frame" x="0.0" y="14" width="375" height="50"/>
+                                        <rect key="frame" x="0.0" y="374" width="375" height="50"/>
                                         <color key="backgroundColor" red="0.91764705879999997" green="0.66274509800000003" blue="0.20392156859999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="50" id="SbR-xD-Nmp"/>
@@ -407,7 +410,7 @@
                             <constraint firstItem="ERl-1x-lTi" firstAttribute="leading" secondItem="4ru-lv-Wel" secondAttribute="leading" id="9Lh-tl-7I9"/>
                             <constraint firstItem="ERl-1x-lTi" firstAttribute="top" secondItem="iLT-0c-nBQ" secondAttribute="top" id="NFL-bH-rcn"/>
                             <constraint firstItem="mVc-7f-Db9" firstAttribute="leading" secondItem="4ru-lv-Wel" secondAttribute="leading" id="XOh-C2-qLu"/>
-                            <constraint firstItem="mVc-7f-Db9" firstAttribute="top" secondItem="MdL-ds-DUg" secondAttribute="bottom" constant="368" id="Y25-Zo-Sie"/>
+                            <constraint firstItem="mVc-7f-Db9" firstAttribute="top" secondItem="MdL-ds-DUg" secondAttribute="bottom" constant="8" id="Y25-Zo-Sie"/>
                             <constraint firstItem="ERl-1x-lTi" firstAttribute="trailing" secondItem="4ru-lv-Wel" secondAttribute="trailing" id="jQl-DN-E4g"/>
                             <constraint firstItem="mVc-7f-Db9" firstAttribute="bottom" secondItem="4ru-lv-Wel" secondAttribute="bottom" id="k90-7W-RCY"/>
                             <constraint firstItem="mVc-7f-Db9" firstAttribute="trailing" secondItem="4ru-lv-Wel" secondAttribute="trailing" id="lne-rg-WS8"/>
